--- a/404.html
+++ b/404.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--<link rel="stylesheet" href="../style/style.css">-->
-	<link rel="stylesheet" href="../style/styleErr.css">
+	<link rel="stylesheet" href="styleErr.css">
 	<title>Error</title>
 </head>
 
@@ -14,16 +13,14 @@
 		<div class="sky">
 			<h2><span>4</span><span>0</span><span>4</span></h2>
 			<div class="grass"></div>
-			<img src="../images/plane.png" class="plane">
+			<img src="plane.png" class="plane">
 		</div>
 		<div class="field">
 			<h2>Opps...looks like you got lost.</h2>
 			<a href="/">Go Home</a>
 		</div>
 	</div>
-	
-	
-	<script src="../script/script.js"></script>
+
 </body>
 
 </html>
